append build